# filecasted

./: .gitignore  LICENSE  README.md  pyproject.toml
filecasted/: __init__.py  cli.py  feedgen.py  project.py
