[tool.poetry]
name = "filecasted"
version = "0.0.1"
description = "An RSS editor to create/modify a podcast with files."
authors = ["n3f <b@n3f.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
toml = "^0.10.1"
addict = "^2.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[tool.poetry.scripts]
filecast = "filecasted.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
